product module done, supplier, user and category modules refactored to reduce redundancy